--- a/app/src/main/res/layout/audio_recorder_view.xml
+++ b/app/src/main/res/layout/audio_recorder_view.xml
@@ -85,6 +85,7 @@
     </LinearLayout>
 
     <include
+        android:id="@+id/loadingSpinner"
         layout="@layout/loading_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
