Make the insurance card ripple again

--- a/app/src/main/res/layout/contract_detail_activity.xml
+++ b/app/src/main/res/layout/contract_detail_activity.xml
@@ -47,7 +47,7 @@
                     android:orientation="vertical">
 
                     <include
-                        android:id="@+id/card"
+                        android:id="@+id/cardContainer"
                         layout="@layout/insurance_contract_card" />
 
                     <com.google.android.material.tabs.TabLayout
