--- a/app/src/main/res/layout/attach_file_image_item.xml
+++ b/app/src/main/res/layout/attach_file_image_item.xml
@@ -27,6 +27,8 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <include layout="@layout/loading_spinner" />
+    <include
+        layout="@layout/loading_spinner"
+        android:id="@+id/loadSpinner" />
 
 </FrameLayout>
