--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -141,6 +141,7 @@
     <dimen name="peril_card_size">56dp</dimen>
     <dimen name="logged_in_card_elevation">1dp</dimen>
     <dimen name="peril_bottom_sheet_icon_size">48dp</dimen>
+    <dimen name="peril_bottom_sheet_close_icon_size">24dp</dimen>
     <!--
     Because the window insets on round devices are larger than 15dp, this padding only applies
     to square screens.
