put all content in recyclerView

--- a/app/src/main/res/layout/peril_bottom_sheet.xml
+++ b/app/src/main/res/layout/peril_bottom_sheet.xml
@@ -27,6 +27,7 @@
             android:contentDescription="@null" />
 
         <ImageView
+            android:id="@+id/pill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -39,54 +40,60 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:layout_width="@dimen/peril_bottom_sheet_icon_size"
-        android:layout_height="@dimen/peril_bottom_sheet_icon_size"
-        android:contentDescription="@null"
-        tools:src="@drawable/ic_active" />
+    <!--    <ImageView
+          android:id="@+id/icon"
+          android:layout_marginTop="@dimen/base_margin_triple"
+          android:layout_width="@dimen/peril_bottom_sheet_icon_size"
+          android:layout_height="@dimen/peril_bottom_sheet_icon_size"
+          android:contentDescription="@null"
+          tools:src="@drawable/ic_active" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_marginTop="@dimen/base_margin_triple"
+      <TextView
+          android:id="@+id/title"
+          android:layout_marginTop="@dimen/base_margin_triple"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textAppearance="?textAppearanceHeadline5"
+          tools:text="Eldsvåda" />
+
+      <TextView
+          android:id="@+id/body"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="@dimen/base_margin_double"
+          android:layout_marginTop="@dimen/base_margin_triple"
+          android:layout_marginEnd="@dimen/base_margin_double"
+          android:textAlignment="center"
+          android:textAppearance="?textAppearanceBody1"
+          tools:text="Vi hjälper dig med reparation, ersättningsboende och sanering om det skulle börja brinna i din villa eller någon annan försäkrad byggnad. Och om ditt hus blir totalskadat ersätter vi dig med en likadan eller motsvarande villa." />
+
+      <LinearLayout
+          android:id="@+id/readMoreContainer"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:layout_marginTop="@dimen/base_margin_double"
+          android:gravity="center">
+
+          <ImageView
+              android:id="@+id/moreInfoIcon"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              app:srcCompat="@drawable/ic_chevron_up"
+              android:contentDescription="@null" />
+
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textAppearance="?textAppearanceCaption"
+              android:text="TODO Read More" />
+      </LinearLayout>-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/coversAndExceptions"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?textAppearanceHeadline5"
-        tools:text="Eldsvåda" />
-
-    <TextView
-        android:id="@+id/body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_double"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:layout_marginEnd="@dimen/base_margin_double"
-        android:textAlignment="center"
-        android:textAppearance="?textAppearanceBody1"
-        tools:text="Vi hjälper dig med reparation, ersättningsboende och sanering om det skulle börja brinna i din villa eller någon annan försäkrad byggnad. Och om ditt hus blir totalskadat ersätter vi dig med en likadan eller motsvarande villa." />
-
-    <LinearLayout
-        android:id="@+id/readMoreContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/moreInfoIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_chevron_up"
-            android:contentDescription="@null" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?textAppearanceCaption"
-            android:text="TODO Read More" />
-    </LinearLayout>
-
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/covered_and_exception_item" />
 
 </LinearLayout>
