--- a/app/src/main/res/layout/bottom_sheet_charity_explanation.xml
+++ b/app/src/main/res/layout/bottom_sheet_charity_explanation.xml
@@ -27,38 +27,12 @@
         android:textAppearance="?textAppearanceSubtitle1" />
 
     <TextView
+        android:id="@+id/body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_triple"
-        android:text="@string/CHARITY_INFO_DIALOG_DESCRIPTION"
+        tools:text="@string/PROFILE_MY_CHARITY_INFO_BODY"
         android:textAppearance="?textAppearanceBody2" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:text="@string/CHARITY_INFO_DIALOG_HOW_IT_WORKS_TITLE"
-        android:textAppearance="?textAppearanceSubtitle1" />
-
-    <TextView
-        style="?textAppearanceBody2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:text="@string/CHARITY_INFO_DIALOG_HOW_IT_WORKS_POINT_ONE" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:text="@string/CHARITY_INFO_DIALOG_HOW_IT_WORKS_POINT_TWO"
-        android:textAppearance="?textAppearanceBody2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:text="@string/CHARITY_INFO_DIALOG_HOW_IT_WORKS_POINT_THREE"
-        android:textAppearance="?textAppearanceBody2" />
 
 </LinearLayout>
