--- a/app/src/main/res/layout/peril_paragraph.xml
+++ b/app/src/main/res/layout/peril_paragraph.xml
@@ -3,6 +3,7 @@
     android:layout_marginTop="@dimen/base_margin_double"
     android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginEnd="@dimen/base_margin_double"
+    android:layout_marginBottom="@dimen/base_margin_septuple"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:textAppearance="?textAppearanceBody1" />
