--- a/app/src/main/res/layout/bottom_sheet_shadow.xml
+++ b/app/src/main/res/layout/bottom_sheet_shadow.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/shadow"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:srcCompat="@drawable/peril_shadow"
-    android:layout_gravity="bottom" />
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/shadow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/peril_shadow"
+        android:layout_gravity="bottom" />
+
+    <ImageView
+        android:id="@+id/chevron"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_chevron_up"
+        android:layout_gravity="center" />
+</FrameLayout>
