--- a/app/src/main/res/drawable/bottom_sheet_handle.xml
+++ b/app/src/main/res/drawable/bottom_sheet_handle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- Theme attribute refused to work properly here -->
-    <solid android:color="@color/colorPrimaryVariant" />
+    <solid android:color="@color/color_divider" />
     <corners android:radius="@dimen/bottom_sheet_handle_corner_radius" />
     <size
         android:width="@dimen/bottom_sheet_handle_width"
