--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -1,3 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="16dp" android:height="16dp" android:viewportWidth="16" android:viewportHeight="16">
-    <path android:pathData="M8.707 8l6.718 6.717-0.708 0.708L8 8.707l-6.718 6.718-0.707-0.708L7.293 8 0.575 1.282l0.708-0.707L8 7.293l6.717-6.718 0.708 0.708L8.707 8z" android:strokeWidth="1" android:fillColor="?colorPrimary" android:fillType="evenOdd"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:pathData="M12 13.06l7.47 7.47 1.06-1.06L13.06 12l7.47-7.47-1.06-1.06L12 10.94 4.53 3.47 3.47 4.53 10.94 12l-7.47 7.47 1.06 1.06L12 13.06z" android:fillColor="?colorPrimary"/>
 </vector>
