--- a/app/src/main/res/drawable-night/card_apartment_background.xml
+++ b/app/src/main/res/drawable-night/card_apartment_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:startColor="#fbd7ec" android:endColor="#e4def7" android:angle="0" android:type="linear"/>
+            <gradient android:startColor="#6a4d36" android:endColor="#3f76ae" android:angle="0" android:type="linear"/>
         </shape>
     </item>
 </selector>
