--- a/app/src/main/res/drawable-night/card_house_background.xml
+++ b/app/src/main/res/drawable-night/card_house_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:startColor="#b9afe3" android:endColor="#f8b992" android:angle="0" android:type="linear"/>
+            <gradient android:startColor="#835329" android:endColor="#cb7b7b" android:angle="0" android:type="linear" />
         </shape>
     </item>
 </selector>
