--- a/app/src/main/res/layout/insurance_contract_card.xml
+++ b/app/src/main/res/layout/insurance_contract_card.xml
@@ -22,81 +22,93 @@
         app:strokeColor="@color/color_divider"
         app:strokeWidth="1dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/hedvig_light_gray"
-            android:padding="@dimen/base_margin_double">
-
-            <TextView
-                android:id="@+id/firstStatusPill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background_pill"
-                android:backgroundTint="@color/yellow"
-                android:visibility="gone"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="AWAITING START DATE"
-                tools:visibility="visible" />
-
-            <TextView
-                android:id="@+id/secondStatusPill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/base_margin"
-                android:background="@drawable/background_pill"
-                android:backgroundTint="@color/yellow"
-                android:visibility="gone"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/firstStatusPill"
-                tools:text="AWAITING START DATE"
-                tools:visibility="visible" />
+            android:background="@color/hedvig_light_gray">
 
             <ImageView
-                android:layout_width="@dimen/contract_card_logo_size"
-                android:layout_height="@dimen/contract_card_logo_size"
-                android:contentDescription="@null"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_hedvig_h"
-                app:tint="@color/lavender_900" />
+                android:id="@+id/blur"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/card_blur"
+                android:contentDescription="@null" />
 
-            <TextView
-                android:id="@+id/contractName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/base_margin"
-                android:textAppearance="?textAppearanceHeadline6"
-                app:layout_constraintBottom_toTopOf="@id/contractPills"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:text="Home Insurance" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/base_margin_double">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/contractPills"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/base_margin"
-                android:orientation="horizontal"
-                android:overScrollMode="never"
-                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/arrow"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:itemCount="6"
-                tools:listitem="@layout/contract_pill" />
+                <TextView
+                    android:id="@+id/firstStatusPill"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background_pill"
+                    android:backgroundTint="@color/yellow"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="AWAITING START DATE"
+                    tools:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@null"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/ic_arrow_forward" />
+                <TextView
+                    android:id="@+id/secondStatusPill"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/base_margin"
+                    android:background="@drawable/background_pill"
+                    android:backgroundTint="@color/yellow"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/firstStatusPill"
+                    tools:text="AWAITING START DATE"
+                    tools:visibility="visible" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="@dimen/contract_card_logo_size"
+                    android:layout_height="@dimen/contract_card_logo_size"
+                    android:contentDescription="@null"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_hedvig_h"
+                    app:tint="?colorPrimary" />
+
+                <TextView
+                    android:id="@+id/contractName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/base_margin"
+                    android:textAppearance="?textAppearanceHeadline6"
+                    app:layout_constraintBottom_toTopOf="@id/contractPills"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:text="Home Insurance" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/contractPills"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/base_margin"
+                    android:orientation="horizontal"
+                    android:overScrollMode="never"
+                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/arrow"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:itemCount="6"
+                    tools:listitem="@layout/contract_pill" />
+
+                <ImageView
+                    android:id="@+id/arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@null"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:srcCompat="@drawable/ic_arrow_forward" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
