--- a/app/src/main/res/layout/insurance_contract_card.xml
+++ b/app/src/main/res/layout/insurance_contract_card.xml
@@ -47,6 +47,7 @@
                     android:background="@drawable/background_pill"
                     android:backgroundTint="@color/yellow"
                     android:visibility="gone"
+                    android:theme="@style/ThemeOverlay.Hedvig.InsuranceCard.StatusPill"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="AWAITING START DATE"
@@ -60,6 +61,7 @@
                     android:background="@drawable/background_pill"
                     android:backgroundTint="@color/yellow"
                     android:visibility="gone"
+                    android:theme="@style/ThemeOverlay.Hedvig.InsuranceCard.StatusPill"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/firstStatusPill"
                     tools:text="AWAITING START DATE"
