--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -70,6 +70,10 @@
         <item name="colorOnSurface">?colorPrimary</item>
     </style>
 
+    <style name="ThemeOverlay.Hedvig.InsuranceCard.StatusPill" parent="">
+        <item name="android:textColorTertiary">@color/text_color_primary_light</item>
+    </style>
+
     <style name="ThemeOverlay.Hedvig.Dialog.Alert" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
         <item name="materialAlertDialogBodyTextStyle">?textAppearanceBody1</item>
     </style>
