--- a/app/src/main/res/layout/activity_choose_plan.xml
+++ b/app/src/main/res/layout/activity_choose_plan.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:titleTextColor="?colorPrimary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
